exam/01/TimesheetTracking/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timesheettracking
  namespace: timesheet-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: timesheettracking
  template:
    metadata:
      labels:
        app: timesheettracking
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: content
              mountPath: /usr/share/nginx/html
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default_type.conf
              subPath: default_type.conf
      volumes:
        - name: content
          configMap:
            name: timesheettracking-content
            items:
              - key: web
                path: web
              - key: status
                path: status
        - name: nginx-config
          configMap:
            name: timesheettracking-content
            items:
              - key: default_type.conf
                path: default_type.conf
